--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -24,3 +24,12 @@ jobs:
         env:
           USERNAME: ${{ secrets.USERNAME }}  #Username of Github
           TOKEN: ${{ secrets.TOKEN }}        #Personal access token has to be created
+       
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v3.2.1-node20
+        with:
+          name: deletion file status upload
+          path: branch_deletion_results.xlsx
+    
+
+          
