--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -19,7 +19,7 @@ jobs:
           pip install PyGithub
               
 
-      - name: Delete branch in GitHub
+      - name: Delete PR in GitHub
         run: python PRdeletion.py
         env:
           USERNAME: ${{ secrets.USERNAME }}  #Username of Github
